# computer-graphics-note

./: .clang-tidy  CMakeLists.txt  README.md  desktop.ini  vcpkg.json
.github/workflows/: build-and-test.yml
benchmark/: CMakeLists.txt
benchmark/include/: benchmark.h  random.h
benchmark/include/rasterization/: clip.h  perspective_interpolate.h  raster_line.h  raster_triangle.h
benchmark/src/: main.cpp
benchmark/src/rasterization/: bresenham_draw_line.cpp  main.cpp  raster_line.cpp  raster_triangle.cpp
include/cpp_template/: hello.h
include/graphics/: bresenham_draw_circle.h  bresenham_draw_line.h  cohen_sutherland_clipping.h  liang_barsky_clipping.h  midpoint_clipping.h  namespace_alias.h  traits.h
include/graphics/rasterization/: bresenham_draw_line.h  clip.h  cohen_sutherland_clipping.h  interpolate.h  liang_barsky_clipping.h  midpoint_clipping.h  perspective_interpolate.h  raster_line.h  raster_triangle.h
include/graphics/texture_mapping/: filtering.h
tests/: .clang-tidy  CMakeLists.txt
tests/include/: test.h  triangle.h
tests/src/: bresenham_draw_line_test.cpp  cohen_sutherland_clipping_test.cpp  liang_barsky_clipping_test.cpp  midpoint_clipping_test.cpp  test.cpp  triangle.cpp
tests/src/rasterization/: bresenham_draw_line.cpp  bresenham_draw_line_test.cpp  clip.cpp  cohen_sutherland_clipping.cpp  liang_barsky_clipping_test.cpp  midpoint_clipping.cpp  perspective_interpolate.cpp  raster_line.cpp  raster_triangle.cpp
